<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlanApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="confirmarpassword">Rep. Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="ingresar">Ingresar</string>
    <string name="planapp">PlanApp</string>
    <string name="fecha">mm/dd/aaaa</string>
    <string name="Botonfecha">Fecha Nac</string>
    <string name="sexo">Sexo</string>
    <string name="M">M</string>
    <string name="H">H</string>
    <string name="nombre">Nombre</string>
    <string name="busqueda">Búsqueda</string>
    <string name="perfil">Perfil</string>
    <string name="notificar">Notificación</string>
    <string name="historial">Historial</string>
    <string name="pendientes">Pendientes</string>
    <string name="ajustes">Ajustes</string>
    <string name="generarpanorama">Generar Panorama</string>
    <string name="acompanante">Acompañante</string>
    <string name="acompanante_inicio">Elija un acompañante</string>
    <string name="amiga">Amiga</string>
    <string name="amigo">Amigo</string>
    <string name="amigos">Amigos</string>
    <string name="trabajo">Trabajo</string>
    <string name="familia">Familia</string>
    <string name="pareja">Pareja</string>
    <string name="cita">Cita</string>
    <string name="presupuesto">Presupuesto disponible</string>
    <string name="generar">Generar</string>
    <string name="ahora">Ahora</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="id">ID</string>
    <string name="nada">-</string>
     <string name="aceptar_panorama">Aceptar Panorama</string>
    <string name="title_activity_main_panoramas">MainPanoramas</string>
    <string name="title_activity_main_listar_panoramas">MainListarPanoramas</string>
    <string name="title_activity_main_ver_panorama">MainVerPanorama</string>
    <string name="title_activity_main_lugares">MainLugares</string>
    <string name="title_activity_main_listar_lugares">MainListarLugares</string>

</resources>
