<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.planapp.MainPanoramas" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="69dp"
        android:text="@string/id" />

    <TextView
        android:id="@+id/text_latitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_id"
        android:layout_below="@+id/text_id"
        android:layout_marginTop="25dp"
        android:text="@string/latitud" />

    <TextView
        android:id="@+id/text_longitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_latitud"
        android:layout_below="@+id/text_latitud"
        android:layout_marginTop="30dp"
        android:text="@string/longitud" />

    <TextView
        android:id="@+id/text_id_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_latitud"
        android:layout_centerHorizontal="true"
        android:text="@string/nada" />

</RelativeLayout>