
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:hint="@string/correo" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/correo"
        android:layout_below="@+id/correo"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/ButtonIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignRight="@+id/pass"
        android:layout_below="@+id/pass"
        android:layout_marginTop="28dp"
        android:text="@string/ingresar" />

    <Button
        android:id="@+id/ButtonRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ButtonIngresar"
        android:layout_alignRight="@+id/ButtonIngresar"
        android:layout_below="@+id/ButtonIngresar"
        android:layout_marginTop="82dp"
        android:text="@string/registrar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/planapp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

</RelativeLayout>