<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/fondo2">

  
    <TextView
        android:id="@+id/textspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/acompanante" 
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Spinner
        android:id="@+id/spinner_acompanante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textspinner"
        android:prompt="@string/acompanante_inicio" 
        android:layout_centerHorizontal="true"/>
    
    <EditText
        android:id="@+id/dinero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dinero"
        android:layout_centerHorizontal="true"
        android:text="@string/presupuesto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/BotonGenerar"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/dinero"
        android:layout_below="@+id/dinero"
        android:layout_marginTop="71dp"
        android:background="@drawable/ahora"
         />

</RelativeLayout>
